--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Simple JS App</title>
   </head>
   <body>
+    <h1>Pokedex</h1>
+    <ul class="pokemonList"></ul>
+
     <script src="js/scripts.js"></script>
   </body>
 </html>
