--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Pokedex</h1>
-    <ul class="pokemonList"></ul>
+    <ul class="pokemon-list"></ul>
 
     <script src="js/scripts.js"></script>
   </body>
